--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 </head>
 
 <body>
+    <nav>
+    <div id="logo">room</div>
+    <div class="items">
+    <li>home</li>
+    <li>shop</li>
+    <li>about</li>
+    <li>contact</li></div>
+</nav>
+    
     <h1 class="header">hey</h1>
     <!--
     Home Shop About Contact Discover innovative ways to decorate We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style
