--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <body>
     <nav>
-    <div id="logo">room</div>
+   <div id="logo">room</div>
     <div class="items">
-    <li>home</li>
-    <li>shop</li>
-    <li>about</li>
-    <li>contact</li></div>
+        <li><a href="#" >home </a></li>
+    <li><a href="#" >shop</a></li>
+    <li><a href="#" >about</a></li>
+    <li><a href="#" >contact</a></li></div>
 </nav>
     
     <h1 class="header">hey</h1>
