--- a/index.html
+++ b/index.html
@@ -19,44 +19,69 @@
 </head>
 
 <body>
+    <section class="top-container">
+        <header class="header container">
+            <nav class="navbar">
+                <a class="hamburger">
+                    <img id="imgId" src="assets/images/icon-hamburger.svg" alt="hamburger">
+                </a>
+
+                <a class="logo">
+                    <img src="assets/images/logo.svg" alt="logo">
+                </a>
+
+                <div class="nav-menu">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a class="nav-link" href="#">home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">shop</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">about</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <article class="title container">
+            <h1 class="title-heading">Discover innovative ways to decorate</h1>
+            <p class="description">
+                We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style with our collection and make your property a reflection of
+                you and what you love.
+            </p>
+
+            <a class="shop-link" href="#">
+            shop now <img class="arrow-icon" src="assets/images/icon-arrow.svg" alt="arrow">
+        </a>
+        </article>
+    </section>
+
+    <main>
+        <section class="about">
+            <div class="dark-img">
+                <img src="assets/images/image-about-dark.jpg" alt="about image dark">
+            </div>
+
+            <div class="about-furniture container">
+                <h2>about our furniture</h2>
+                <p>
+                    Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary
+                    styles or anything in between. Product specialists are available to help you create your dream space.
+                </p>
+            </div>
+
+            <div class="light-img">
+                <img src="assets/images/image-about-light.jpg" alt="about image dark">
+            </div>
+        </section>
+    </main>
+
+
+
     <!--
-    Home Shop About Contact Discover innovative ways to decorate We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine form and function in bringing your vision to life. Create a room in your own style
-    with our collection and make your property a reflection of you and what you love. Shop now We are available all across the globe With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re
+    We are available all across the globe With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re
     in most major cities throughout the country. Find the branch nearest you using our store locator. Any questions? Don't hesitate to contact us today. Shop now Manufactured with the best materials Our modern furniture store provide a high level of quality.
     Our company has invested in advanced technology to ensure that every product is made as perfect and as consistent as possible. With three decades of experience in this industry, we understand what customers want for their home and office. Shop now
-    About our furniture Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need,
-    from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.
+    About our furniture 
     -->
-
-   
-    <nav class="navbar">
-        <div class="onClick">
-            <a class="close">
-                <img id="close-img" src="assets/images/icon-close.svg" alt="Close">
-            </a>
-        </div>
-        
-        <!-- <div class="container"> -->
-            <a class="nav-toggler" >
-                <img id="imgId"  src="assets/images/icon-hamburger.svg" alt="hamburger">
-            </a>
-
-            <a class="logo">
-                <img class="logo-img" src="assets/images/logo.svg" alt="logo">
-            </a>
-        <!-- </div> -->
-
-            <ul class="nav-list">
-                <li class="nav-item nav-item-mob"><a href="#">home</a></li>
-                <li class="nav-item nav-item-mob"><a href="#">about</a></li>
-                <li class="nav-item nav-item-mob"><a href="#">contact</a></li>
-                <li class="nav-item nav-item-mob"><a href="#">blog</a></li>
-            </ul>
-
-       </nav> 
-
-   </div>
-        
     <script src="js/script.js" type="text/javascript"></script>
 </body>
 
